--- a/FrameworkTwoPointO/Reports/ValidateRequest/20200130080635/report.html
+++ b/FrameworkTwoPointO/Reports/ValidateRequest/20200130080635/report.html
@@ -44,7 +44,7 @@
 		<!-- nav-right -->
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<a href='#!'>
-			<span class='label blue darken-3 suite-start-time'>Jan 26, 2020 08:59:23 PM</span>
+			<span class='label blue darken-3 suite-start-time'>Jan 30, 2020 08:06:35 PM</span>
 			</a>
 		</ul>
 	</div>
@@ -125,36 +125,15 @@
 			<ul id='test-collection' class='test-collection'>
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='1'>
 					<div class='test-heading'>
-						<span class='test-name'>test</span>
-						<span class='test-time'>Jan 26, 2020 08:59:23 PM</span>
+						<span class='test-name'>ValidateRequest</span>
+						<span class='test-time'>Jan 30, 2020 08:06:35 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Jan 26, 2020 08:59:23 PM</span>
-	<span class='label end-time'>Jan 26, 2020 09:00:04 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 40s+802ms</span>
-</div>
-<div class='test-steps'>
-	<table class='bordered table-results'>
-		<thead>
-			<tr>
-				<th>Status</th>
-				<th>Timestamp</th>
-				<th>Details</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr class='log' status='pass'>
-				<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-				<td class='timestamp'>9:00:04 PM</td>
-				<td class='step-details'>
-						Successfully navigated to:Facebook.com
-					
-				</td>
-			</tr>
-		</tbody>
-	</table>
+	<span class='label start-time'>Jan 30, 2020 08:06:35 PM</span>
+	<span class='label end-time'>Jan 30, 2020 08:06:35 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+0ms</span>
 </div>
 					</div>
 				</li>
@@ -198,19 +177,19 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Jan 26, 2020 08:59:23 PM</div>
+					<div class='panel-lead'>Jan 30, 2020 08:06:35 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Jan 26, 2020 09:00:04 PM</div>
+			 		<div class='panel-lead'>Jan 30, 2020 08:06:35 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>0h 0m 40s+818ms</div>
+					<div class='panel-lead'>0h 0m 0s+90ms</div>
 				</div>
 			</div>
 		</div>
@@ -253,7 +232,7 @@
 		</script>
 		<script>
 			var timeline = {
-			        "test":40.802
+			        "ValidateRequest":0
 			};
 		</script>
 		<script src='https://cdn.rawgit.com/extent-framework/extent-github-cdn/b65cd69/v3html/js/extent.js' type='text/javascript'></script>
