--- a/FrameworkTwoPointO/Reports/ValidateRequest/20200130080758/report.html
+++ b/FrameworkTwoPointO/Reports/ValidateRequest/20200130080758/report.html
@@ -44,7 +44,7 @@
 		<!-- nav-right -->
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<a href='#!'>
-			<span class='label blue darken-3 suite-start-time'>Jan 26, 2020 08:53:32 PM</span>
+			<span class='label blue darken-3 suite-start-time'>Jan 30, 2020 08:07:58 PM</span>
 			</a>
 		</ul>
 	</div>
@@ -125,14 +125,14 @@
 			<ul id='test-collection' class='test-collection'>
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='1'>
 					<div class='test-heading'>
-						<span class='test-name'>test</span>
-						<span class='test-time'>Jan 26, 2020 08:53:32 PM</span>
+						<span class='test-name'>ValidateRequest</span>
+						<span class='test-time'>Jan 30, 2020 08:07:58 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Jan 26, 2020 08:53:32 PM</span>
-	<span class='label end-time'>Jan 26, 2020 08:53:32 PM</span>
+	<span class='label start-time'>Jan 30, 2020 08:07:58 PM</span>
+	<span class='label end-time'>Jan 30, 2020 08:07:58 PM</span>
 	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+0ms</span>
 </div>
 					</div>
@@ -177,19 +177,19 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Jan 26, 2020 08:53:32 PM</div>
+					<div class='panel-lead'>Jan 30, 2020 08:07:58 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Jan 26, 2020 08:53:32 PM</div>
+			 		<div class='panel-lead'>Jan 30, 2020 08:07:58 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>0h 0m 0s+219ms</div>
+					<div class='panel-lead'>0h 0m 0s+90ms</div>
 				</div>
 			</div>
 		</div>
@@ -232,7 +232,7 @@
 		</script>
 		<script>
 			var timeline = {
-			        "test":0
+			        "ValidateRequest":0
 			};
 		</script>
 		<script src='https://cdn.rawgit.com/extent-framework/extent-github-cdn/b65cd69/v3html/js/extent.js' type='text/javascript'></script>
